--- a/LazySsh/res/layout/fragment_splash.xml
+++ b/LazySsh/res/layout/fragment_splash.xml
@@ -17,7 +17,8 @@
         android:ems="10"
         android:typeface="monospace"
         android:textSize="12sp"
-        android:textColor="#47E61C"
+        android:textColor="@color/shell_green"
+        android:textColorHint="@color/shell_green"
         android:hint="@string/splash_text"
         android:ellipsize="start"
     	android:gravity="center_horizontal"
