--- a/LazySsh/res/layout/activity_main.xml
+++ b/LazySsh/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
-       android:background="#F3F3F4"
+       android:background="#000"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" >
