--- a/LazySsh/res/values-v11/styles.xml
+++ b/LazySsh/res/values-v11/styles.xml
@@ -1,11 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- For honeycomb and up -->
 <resources>
 
-    <!--
-        Base application theme for API 11+. This theme completely replaces
-        AppBaseTheme from res/values/styles.xml on API 11+ devices.
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
-        <!-- API 11 theme customizations can go here. -->
+    <style name="myTheme" parent="@android:style/Theme.Holo">
+        <item name="android:actionBarStyle">@style/myTheme.ActionBar</item>
+        <item name="android:actionMenuTextColor">@color/shell_green</item>
+    </style>
+
+    <style name="myTheme.ActionBar" parent="@android:style/Widget.Holo.ActionBar">
+        <item name="android:titleTextStyle">@style/myTheme.ActionBar.Text</item>
+    </style>
+
+    <style name="myTheme.ActionBar.Text" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/shell_green</item>
     </style>
 
 </resources>
