--- a/LazySsh/res/layout/fragment_splash.xml
+++ b/LazySsh/res/layout/fragment_splash.xml
@@ -24,6 +24,6 @@
     	android:gravity="center_horizontal"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine|textNoSuggestions" />
 	
 </RelativeLayout>
