--- a/LazySsh/res/layout/fragment_turn_off.xml
+++ b/LazySsh/res/layout/fragment_turn_off.xml
@@ -22,7 +22,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:gravity="top"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine|textNoSuggestions" />
     
 	<Button 
 	    android:id="@+id/button_poweroff"
