Added WoL functionality

--- a/LazySsh/res/values/array.xml
+++ b/LazySsh/res/values/array.xml
@@ -2,6 +2,7 @@
 <resources>
     <string-array name="menu_array">
         <item>PowerOff NAS</item>
+        <item>Wake On Lan NAS</item>
         <item>Settings</item>
         <item>Exit app</item>
     </string-array>
