--- a/LazySsh/res/xml/preferences.xml
+++ b/LazySsh/res/xml/preferences.xml
@@ -14,6 +14,15 @@
 	        android:title="@string/pref_nas_ip_address_title" />
 	    
 	    <EditTextPreference
+	        android:defaultValue="@string/pref_nas_mac_address_default"
+	        android:inputType="textNoSuggestions"
+	        android:key="nas_mac_address"
+	        android:maxLines="1"
+	        android:selectAllOnFocus="true"
+	        android:singleLine="true"
+	        android:title="@string/pref_nas_mac_address_title" />
+	    
+	    <EditTextPreference
 	        android:defaultValue="@string/pref_nas_ssh_username_default"
 	        android:inputType="textNoSuggestions"
 	        android:key="nas_ssh_username"
@@ -56,4 +65,5 @@
 	        android:title="@string/pref_nas_command_title" />
         
     </PreferenceCategory>
+        
 </PreferenceScreen>
