--- a/LazySsh/res/layout/activity_main.xml
+++ b/LazySsh/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
        android:layout_gravity="start"
        android:background="#000"
        android:choiceMode="singleChoice"
-       android:divider="@android:color/transparent"
-       android:dividerHeight="0dp" >
+       android:divider="@color/grey"
+       android:dividerHeight="1dp" >
        
     </ListView>
 
