--- a/LazySsh/res/layout/drawer_list_item.xml
+++ b/LazySsh/res/layout/drawer_list_item.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginRight="6dip"
         android:contentDescription="TODO"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_action_settings" />
 
     <TextView
         android:id="@+id/secondLine"
