--- a/LazySsh/res/values/array.xml
+++ b/LazySsh/res/values/array.xml
@@ -8,9 +8,9 @@
     </string-array>
     
     <string-array name="menu_array_icons">
-        <item>ic_launcher.png</item>
-        <item>ic_launcher.png</item>
-        <item>ic_action_settings.png</item>
-        <item>ic_launcher.png</item>
+        <item>ic_launcher</item>
+        <item>ic_launcher</item>
+        <item>ic_action_settings</item>
+        <item>ic_launcher</item>
     </string-array>
 </resources>
